# geo-functions

./: .gitignore  LICENSE  README.md  debug_brent.py  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_comprehensive.py  test_functions.py
uk_geo_neighbors/: __init__.py  neighbors.py
