[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "uk-geo-neighbors"
version = "0.1.0"
authors = [
    { name = "Samuel Bakst", email = "107sbakst@gmail.com" }
]
description = "Python package for finding neighboring UK administrative areas using geopandas"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["geopandas", "uk", "administrative areas", "neighbors", "boundaries", "geography", "spatial analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas>=0.10.0",
    "pandas>=1.3.0",
    "shapely>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/107SBakst/geo-functions"
"Bug Tracker" = "https://github.com/107SBakst/geo-functions/issues"
